 - [ZBXNEXT-483] added vfs.file.contents[file,encoding] check (asaveljevs)
 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.4rc1

 - [ZBX-3011] passwords are no longer shown in HTML when editing media types (Vedmak)
 - [ZBXNEXT-510] sending of SMS messages through Ez Texting is now integrated into Zabbix (asaveljevs,Vedmak)
 - [ZBX-1425] option ALL is added to host group dropdown when adding or editing host group (KB)
 - [ZBX-1675] fixed map element coordinates do not update after the element has been dragged (Vedmak)
 - [ZBX-1292] item names are now prefixed with host names, if they are from different hosts in trigger discription popup (KB)
 - [ZBX-2844] added HTML escaping of screen names in combox box output in monitoring (KB)
 - [ZBXNEXT-373] added support for NTLM authentication to Web monitoring (asaveljevs,Vedmak)
 - [ZBX-1486] when multiple map elements are selected, pressing "Remove" in editing form removes all selected elements (KB)
 - [ZBX-1442] when linking objects during map editing, link "apply" does not close the form any more (KB)
 - [ZBX-2986] acknowledges now are hidden in last 20 issue popup when turned off (KB)
 - [ZBX-2974] fixed possibility to delete templated applications (Vedmak)
 - [ZBX-1172] added sorting for audit resource dropdown (Vedmak)
 - [ZBX-2982] added IP and port of Zabbix server in dashboard widget "Status of Zabbix" (Vedmak)
 - [ZBX-2964] fixed processes failing to start when no IPv6 is available on the system (asaveljevs,Sasha)
 - [ZBX-2977] fixed removing unused records in node_cksum table; thanks to Łukasz Reszka (Sasha)
 - [ZBX-2946] fixed building from FreeBSD ports with libexecinfo installed; thanks to Dmitry Yakovlev (asaveljevs)