@@ -293,7 +293,6 @@ void	__zbx_mutex_unlock(const char *filename, int line, ZBX_MUTEX *mutex)
  * Comments:                                                                  *
  *                                                                            *
  ******************************************************************************/
-
 int zbx_mutex_destroy(ZBX_MUTEX *mutex)
 {
 
@@ -314,11 +313,10 @@ int zbx_mutex_destroy(ZBX_MUTEX *mutex)
 
 #endif /* _WINDOWS */
 
-	*mutex = (ZBX_MUTEX)NULL;
+	*mutex = ZBX_MUTEX_NULL;
 
 	return ZBX_MUTEX_OK;
 }
-
 
 #if defined(HAVE_SQLITE3) && !defined(_WINDOWS)
 
